// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`folderMirror/utils/diffTrees diffs should include deletions 1`] = `
[
  {
    "itemType": 1,
    "path": "Test.md",
    "type": "remove",
  },
]
`;

exports[`folderMirror/utils/diffTrees diffs should include updates to items 1`] = `
[
  {
    "itemType": 1,
    "newItem": {
      "body": "updated!",
      "id": "12345678901234567890123456789012",
      "parent_id": "c3176726992c11e9ac940492261af972",
      "title": "Test",
      "type_": 1,
    },
    "path": "Test.md",
    "type": "update",
  },
]
`;

exports[`folderMirror/utils/diffTrees should diff with the empty tree: diff: empty vs folder and notes 1`] = `
[
  {
    "item": {
      "id": "12345678901234567890123456789012",
      "parent_id": "c3176726992c11e9ac940492261af972",
      "title": "Test",
      "type_": 1,
    },
    "itemType": 1,
    "path": "Test.md",
    "type": "add",
  },
  {
    "item": {
      "id": "22345678901234567890123456789012",
      "parent_id": "c3176726992c11e9ac940492261af972",
      "title": "Note 2",
      "type_": 1,
    },
    "itemType": 1,
    "path": "Note 2.md",
    "type": "add",
  },
  {
    "item": {
      "id": "32345678901234567890123456789012",
      "parent_id": "c3176726992c11e9ac940492261af972",
      "title": "Folder 1",
      "type_": 2,
    },
    "itemType": 2,
    "path": "Folder 1",
    "type": "add",
  },
  {
    "item": {
      "id": "22345678901234567890123456789013",
      "parent_id": "32345678901234567890123456789012",
      "title": "Test",
      "type_": 1,
    },
    "itemType": 1,
    "path": "Folder 1/Test.md",
    "type": "add",
  },
]
`;

exports[`folderMirror/utils/diffTrees should diff with the empty tree: diff: empty vs single note 1`] = `
[
  {
    "item": {
      "id": "12345678901234567890123456789012",
      "parent_id": "c3176726992c11e9ac940492261af972",
      "title": "Test",
      "type_": 1,
    },
    "itemType": 1,
    "path": "Test.md",
    "type": "add",
  },
]
`;
